ci(ci): add ruff as dependency

--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -8,6 +8,7 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.121.3",
     "httpx>=0.28.1",
+    "ruff>=0.14.6",
     "uvicorn>=0.38.0",
 ]
 
