--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -8,10 +8,6 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.121.3",
     "httpx>=0.28.1",
-    "pytest>=9.0.1",
-    "pytest-asyncio>=1.3.0",
-    "pytest-cov>=7.0.0",
-    "ruff>=0.14.6",
     "uvicorn>=0.38.0",
 ]
 
@@ -27,3 +23,11 @@ asyncio_default_fixture_loop_scope = "function"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.1",
+    "pytest-asyncio>=1.3.0",
+    "pytest-cov>=7.0.0",
+    "ruff>=0.14.6",
+]
