fix(frontend): fix typo in frontend workflow

--- a/.github/workflows/frontend_tests.yaml
+++ b/.github/workflows/frontend_tests.yaml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./src/Frontend
+        working-directory: ./src/frontend
 
     steps:
       - name: Checkout code
