--- a/src/frontend/pyproject.toml
+++ b/src/frontend/pyproject.toml
@@ -8,6 +8,7 @@ requires-python = ">=3.13"
 dependencies = [
     "flask>=3.1.2",
     "requests>=2.32.5",
+    "ruff>=0.14.6",
     "typing>=3.10.0.0",
 ]
 
