--- a/src/frontend/pyproject.toml
+++ b/src/frontend/pyproject.toml
@@ -8,7 +8,6 @@ requires-python = ">=3.13"
 dependencies = [
     "flask>=3.1.2",
     "requests>=2.32.5",
-    "ruff>=0.14.6",
     "typing>=3.10.0.0",
 ]
 
@@ -21,3 +20,11 @@ packages = ["src/frontend"]
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.1",
+    "pytest-cov>=7.0.0",
+    "responses>=0.25.8",
+    "ruff>=0.14.6",
+]
