--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -10,14 +10,14 @@ WORKDIR /app
 RUN --mount=type=cache,target=/root/.cache/uv \
   --mount=type=bind,source=uv.lock,target=uv.lock \
   --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
-  uv sync --locked --no-install-project --no-editable --no-dev
+  uv sync --locked --no-install-project --no-editable
 
 # Copy the project into the intermediate image
 COPY . /app
 
 # Sync the project and install it, now that we have access to the source code
 RUN --mount=type=cache,target=/root/.cache/uv \
-  uv sync --locked --no-editable
+  uv sync --locked --no-editable --no-dev
 
 FROM python:3.13-alpine
 
