--- a/src/frontend/pyproject.toml
+++ b/src/frontend/pyproject.toml
@@ -20,3 +20,11 @@ packages = ["src/frontend"]
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.1",
+    "pytest-cov>=7.0.0",
+    "responses>=0.25.8",
+    "ruff>=0.14.6",
+]
