--- a/mise.toml
+++ b/mise.toml
@@ -1,4 +1,7 @@
 [tools]
+k3d = "latest"
+k9s = "latest"
+kubectl = "latest"
 pre-commit = "latest"
 python = "3.13"
 ruff = "latest"
@@ -16,3 +19,15 @@ GITOPS_REPO = 'devops-study-app-gitops'
 
 [hooks]
 enter = "bash ./scripts/setup_project"
+
+[tasks.k8s-setup-local]
+description = "Set up a basic Kubernetes cluster for development that builds the local images and applies them"
+run = "bash ./kubernetes/setup_cluster_local"
+
+[tasks.k8s-setup-minimal]
+description = "Set up a basic Kubernetes cluster for development that builds the local images and applies them"
+run = "bash ./kubernetes/setup_cluster_minimal"
+
+[tasks.k8s-e2e-test]
+description = "Run end to end tests on the Kubernetes deployment"
+run = "cd ./kubernetes && uv run e2e_test.py"
